--- a/52514615/BusyIndicator/BusyIndicator/App.xaml
+++ b/52514615/BusyIndicator/BusyIndicator/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="BusyIndicator.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BusyIndicator"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:BusyIndicator">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
